test: Add test for RemoveMojo